--- a/FIPLY/Dokumente/FIPLY Latex/literatur.bib
+++ b/FIPLY/Dokumente/FIPLY Latex/literatur.bib
@@ -1,26 +1,5 @@
 % Encoding: UTF-8
 
-@Misc{adobephoto,
-	title = {Adobe Photoshop},
-	month = mar,
-	year =  {2016},
-	url =   {http://www.adobe.com/}
-}
-
-@Misc{texstudio,
-	title = {TexStudio},
-	month = mar,
-	year =  {2016},
-	url =   {http://latex.tugraz.at/programme/texstudio}
-}
-
-@Misc{androidstudiodef,
-	title = {Android Studio Dev},
-	month = mar,
-	year =  {2016},
-	url =   {https://developer.android.com/tools/studio/index.html}
-}
-
 @Misc{2016,
   title = {Möglichkeiten der App Vermarktung: Teil 1},
   month = feb,
@@ -84,11 +63,25 @@
   url =   {http://developer.android.com/training/implementing-navigation/nav-drawer.html}
 }
 
+@Misc{adobephoto,
+	title = {Adobe Photoshop},
+	month = mar,
+	year =  {2016},
+	url =   {http://www.adobe.com/}
+}
+
 @Misc{adTPermissions,
   title = {Requesting Permissions at Run Time},
   month = mar,
   year =  {2016},
   url =   {http://developer.android.com/training/permissions/requesting.html}
+}
+
+@Misc{androidstudiodef,
+	title = {Android Studio Dev},
+	month = mar,
+	year =  {2016},
+	url =   {https://developer.android.com/tools/studio/index.html}
 }
 
 @Misc{bMediaPlayer,
@@ -264,12 +257,27 @@
 	url = {http://www.app-entwicklung.info/2015/05/moglichkeiten-der-app-vermarktung-teil-2-die-app-store-optimierung-aso/}
 }
 
+@Misc{soBundles,
+  author = {Jeremy Logan},
+  title =  {Passing a Bundle on startActivity()?},
+  month =  mar,
+  year =   {2016},
+  url =    {http://stackoverflow.com/questions/768969/passing-a-bundle-on-startactivity}
+}
+
 @Misc{t3nGithub,
   author = {Moritz Stückler},
   title =  {Was ist eigentlich dieses GitHub?},
   month =  mar,
   year =   {2016},
   url =    {http://t3n.de/news/eigentlich-github-472886/}
+}
+
+@Misc{texstudio,
+	title = {TexStudio},
+	month = mar,
+	year =  {2016},
+	url =   {http://latex.tugraz.at/programme/texstudio}
 }
 
 @Misc{tplantheorie,
