Updated most Docs

--- a/FIPLY/Dokumente/FIPLY Latex/FIPLY_base.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/FIPLY_base.tex
@@ -77,10 +77,10 @@
 \newpage
 \subfile{irsiegler_SocialMedia}
 \newpage
-\subsection{Notifications}
-\subfile{bersenkowitsch_Notifications}
-\newpage
-\subfile{denkmayr_Notifications}
+%\subsection{Notifications}
+%\subfile{bersenkowitsch_Notifications}
+%\newpage
+%\subfile{denkmayr_Notifications}
 
 
 \newpage % KAPITEL DESIGN
