--- a/FIPLY/Dokumente/FIPLY Latex/denkmayr_Donations.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/denkmayr_Donations.tex
@@ -12,11 +12,11 @@ Zu den populärsten Formen zählen Dienste wie PayPal, Flattr, das Implementiere
 
 \subsubsection{Flattr}
 \begin{quote}
-When you're registered to flattr, you add money to your account and set a monthly budget. During the month you flattr creators by clicking the Flattr-button next to their content. At the end of the month, your monthly budget is divided between all the things you flattered and sent to the creators.
+''When you're registered to flattr, you add money to your account and set a monthly budget. During the month you flattr creators by clicking the Flattr-button next to their content. At the end of the month, your monthly budget is divided between all the things you flattered and sent to the creators.''
 \end{quote}[Flattr \cite{flattr}]
 
 \begin{quote}
-Flattr can be used as a complement to accepting donations. Or to having advertising. Or to help getting donations you never get for your open source software, blog, music, film, game etc etc.
+''Flattr can be used as a complement to accepting donations. Or to having advertising. Or to help getting donations you never get for your open source software, blog, music, film, game etc etc.''
 \end{quote}[Flattr \cite{flattr}]
 
 \ \\
@@ -28,12 +28,12 @@ PayPal und deren Mobile Payment Libraries unterstützen die einfache Implementie
 Da wir unsere App aber in den Google Play Store stellen wollen, stehen wir vor dem Problem, dass die Einbindung von Donations in Apps, die über den Play Store vertrieben werden, nur sehr vage in den Google Play-Programmrichtlinien für Entwickler beschrieben sind.
 
 \begin{quote}
-Käufe im Store: Entwickler, die Gebühren für Apps und Downloads bei Google Play erheben, müssen dies über das Zahlungssystem von Google Play tun.
+''Käufe im Store: Entwickler, die Gebühren für Apps und Downloads bei Google Play erheben, müssen dies über das Zahlungssystem von Google Play tun.''
 \end{quote}[Google Play \cite{gpDevContentPolicy}]
 
 \begin{quote}
-Here are some examples of products not currently supported by Google Play In-app Billing: [...]
-One time-payments, including peer-to-peer payments, online auctions, and donations.
+''Here are some examples of products not currently supported by Google Play In-app Billing: [...]
+One time-payments, including peer-to-peer payments, online auctions, and donations.''
 \end{quote}[Google Play \cite{gpInAppBilling}]
 \ \\
 \subsubsection{Donations über In-App-Käufe}
