--- a/FIPLY/Dokumente/FIPLY Latex/denkmayr_Github.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/denkmayr_Github.tex
@@ -26,7 +26,7 @@ Dieses Upgrade kostet \$7.00/Monat. In einem Private Repository, kann der Besitz
 
 \subsubsection{Git}
 \begin{quote}
-At the heart of GitHub is an open source version control system (VCS) called Git. Git is responsible for everything GitHub-related that happens locally on your computer.
+''At the heart of GitHub is an open source version control system (VCS) called Git. Git is responsible for everything GitHub-related that happens locally on your computer.''
 \end{quote}
 [GitHub \cite{githubSetUpGit}]
 
@@ -36,8 +36,6 @@ Der größte Unterschied dieses Systems gegenüber anderen Systemen der Versions
 In Git wird eine lokale Kopie des Repositories angelegt und gewartet.
 Dies benötigt zusätzlichen Speicherplatz, allerdings ermöglicht dieses System eine schnellere Arbeitsweise, da die Übertragung zwischen dem lokalen und dem entfernten Repository in den meisten Arbeitsschritten eliminiert wird. 
 
-
-\newpage
 \begin{wrapfigure}{r}{0.20\textwidth}
 \begin{center}
 	\includegraphics[scale=0.20]{img/GitHub}
