Removed Screenshots momentarily

--- a/FIPLY/Dokumente/FIPLY Latex/denkmayr_Fragments.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/denkmayr_Fragments.tex
@@ -77,25 +77,25 @@ Methoden wie diese werden immer wieder verwendet, um die Fragment Transactions a
 \end{lstlisting}
 So sieht ein FrameLayout aus das wir immer wieder verwenden, um darin Fragments anzuzeigen.
 
-\newpage
-\begin{figure}[H] % Bilder aktualisieren
-	\begin{subfigure}[h]{0.3\textwidth}
-	\includegraphics[scale=0.20]{img/NavigationDrawer}
-	\end{subfigure}
-	\hfil
-	\begin{subfigure}[h]{0.3\textwidth}
-	\includegraphics[scale=0.20]{img/MFragment}
-	\end{subfigure}	
-	\caption{Bild des NavigationDrawers und des FMains} 
-	\ \\
-	\begin{subfigure}[h]{0.3\textwidth}
-	\includegraphics[scale=0.20]{img/Uebungskatalog}
-	\end{subfigure}
-	\hfil
-	\begin{subfigure}[h]{0.3\textwidth}
-	\includegraphics[scale=0.20]{img/Uebungskatalog_detail_video}
-	\end{subfigure}	
-	\caption{Bei Klicken eines Elements in der ListView wird die zugehörige DetailView aufgerufen}
-\end{figure}
+%\newpage
+%\begin{figure}[H] % Bilder aktualisieren
+%	\begin{subfigure}[h]{0.3\textwidth}
+%	\includegraphics[scale=0.20]{img/NavigationDrawer}
+%	\end{subfigure}
+%	\hfil
+%	\begin{subfigure}[h]{0.3\textwidth}
+%	\includegraphics[scale=0.20]{img/MFragment}
+%	\end{subfigure}	
+%	\caption{Bild des NavigationDrawers und des FMains} 
+%	\ \\
+%	\begin{subfigure}[h]{0.3\textwidth}
+%	\includegraphics[scale=0.20]{img/Uebungskatalog}
+%	\end{subfigure}
+%	\hfil
+%	\begin{subfigure}[h]{0.3\textwidth}
+%	\includegraphics[scale=0.20]{img/Uebungskatalog_detail_video}
+%	\end{subfigure}	
+%	\caption{Bei Klicken eines Elements in der ListView wird die zugehörige DetailView aufgerufen}
+%\end{figure}
 
 \end{document}
