--- a/FIPLY/Dokumente/FIPLY Latex/irsiegler_Exercises.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/irsiegler_Exercises.tex
@@ -135,23 +135,21 @@ Um die geklickte Muskelgruppe zu ermitteln, wurden zwei Auswahlbereiche überein
 Jener Auswahlbereich, welchen der Benutzer zu sehen bekommt.
 Dieser Auswahlbereich ist nur die visuelle Stütze für den Benutzer, sie hat keinerlei funktionalen Nutzen.
 
-\ \\
-\\begin{figure}[H]
+\begin{figure}[H]
 	\begin{subfigure}[b]{0.3\textwidth}
-	\includegraphics[scale=0.55]{img/Uebungskatalog_filter_overlay}
+	\includegraphics[scale=0.3]{img/Uebungskatalog_filter_overlay}
 	\end{subfigure}
 	\hfil
 	\caption{Das sichtbare Overlay des Filters.}
 \end{figure}
 
 
-\ \\
 Und eine farbkodierte Maske, welche der Benutzer nicht sieht, mit welcher er aber eigentlich interagiert.
 Bei einem Klick auf die Auswahlfäche kann nachvollzogen werden welche Farbe der angeklickte Bereich hat, somit wird festgestellt welche Muskelgruppe der Benutzer ausgewählt hat.
 
 \begin{figure}[H]
 	\begin{subfigure}[b]{0.3\textwidth}
-	\includegraphics[scale=0.55]{img/Uebungskatalog_filter_maskl}
+	\includegraphics[scale=0.3]{img/Uebungskatalog_filter_mask}
 	\end{subfigure}
 	\hfil
 	\caption{Die nicht sichtbare Maske.}
