--- a/FIPLY/Dokumente/FIPLY Latex/FIPLY_base.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/FIPLY_base.tex
@@ -64,8 +64,8 @@
 \subfile{bersenkowitsch_export}
 \newpage
 \subfile{bersenkowitsch_trainingsplanmgt}
-%\newpage
-%\subfile{irsiegler_Exercises}
+\newpage
+\subfile{irsiegler_Exercises}
 \newpage
 \subfile{irsiegler_Video}
 \newpage
@@ -81,7 +81,6 @@
 %\subfile{bersenkowitsch_Notifications}
 %\newpage
 %\subfile{denkmayr_Notifications}
-
 
 \newpage % KAPITEL DESIGN
 \section{Design} 
@@ -106,6 +105,7 @@
 
 \newpage
 \lstlistoflistings
+\newpage
 \listoffigures
 \newpage
 \printbibliography
