--- a/FIPLY/Dokumente/FIPLY Latex/literatur.bib
+++ b/FIPLY/Dokumente/FIPLY Latex/literatur.bib
@@ -7,6 +7,13 @@
   url =   {http://www.app-entwicklung.info/2015/04/moglichkeiten-der-app-vermarktung-teil-1-website-social-media-presse-events-co/}
 }
 
+@Misc{acContentResolver,
+  author = {2006 The Android Open Source Project},
+  title =  {ContentResolver.java},
+  month =  mar,
+  year =   {2016}
+}
+
 @Misc{adAdministerBilling,
   title = {In-App-Billing},
   month = feb,
